# gpp-decrypt

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  SETUP.md  gpp-decrypt.py  pyproject.toml  setup.py
.github/workflows/: ci-simple.yml.example  ci.yml  publish.yml  release.yml
src/gpp_decrypt/: __init__.py  cli.py  core.py
tests/: __init__.py  test_core.py
